[package]
name = "plimeor_dotfiles"
description = "Pesonal dotfiles manager"
version = "0.2.0"
edition = "2021"
authors = ["Plimeor <plimeor@gmail.com>"]
license = "MIT"

[[bin]]
name = "dotfiles"
path = "src/main.rs"
test = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3"
